Agregando funcionalidades alta profesional- listado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,12 @@
 	    	<a class="nav-link active" routerLink="home">
 					<ion-icon name="list"></ion-icon>
 				</a>
-	  	</li>
+		  </li>
+		  <li class="nav-item">
+				<a class="nav-link active" style="color:red" routerLink="listadoespecialistas">
+						<ion-icon name="list-box"></ion-icon>
+					</a>
+			  </li>
 	  	<li class="nav-item">
 	    	<a class="nav-link" routerLink="new-user">
 					<ion-icon name="add"></ion-icon>
