--- a/src/app/Componentes/altas/altas.component.html
+++ b/src/app/Componentes/altas/altas.component.html
@@ -2,18 +2,27 @@
 ">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item active" aria-current="page">Registrar Usuario</li>
+        <li class="breadcrumb-item active" aria-current="page">Registrar Especialista</li>
       </ol>
     </nav>
     <div class="page-content" style=" background-color: #FFF;">
       <div class="row">
         <div class="col col-md-4">
-          <img class="img-avatar" style=" border-radius: 50%;
-          width: 150px;
-          display: block;
-          margin: 20px auto;" src="{{avatarLink}}">
-          <button mat-stroked-button style="display: block;
-          margin: 0px auto;" class="change-img-button" color="primary" (click)="openDialog()">Elegir Imagen</button>
+
+            <div class="text-center">
+                <img formControlName="imageUrl2"  class="img-avatar" style=" border-radius: 50%;
+                width: 150px;
+                display: block;
+                margin: 20px auto;" [src]="imgSrc" width="350px" height="250px" (click)="fileUploader.click()">
+              </div>
+              <div class="form-group">
+                <label>Seleccione una imagen para subir</label>
+                <input type="file" accept="image/*" class="form-control" #fileUploader formControlName="imageUrl"
+                  (change)="showPreview($event)">
+                <div class="text-danger" *ngIf="isSubmitted && formControls.imageUrl.errors?.required">This field is required.
+                </div>
+              </div>
+
         </div>
   
         <div class="col col-md-8">
@@ -51,22 +60,21 @@
             </div>
             <div class="form-group">     
               <span></span>    
-  <!-- <select   placeholder="Especialidad" class="form-control" formControlName="especialidad" [(ngModel)]="tipousuario" #t (change)="usuario(t.value)" style="background-color:#007bff;border-radius: 20px;     height: 40px; font-size: 22px; border: none;  color: #fff;  " >
+  <select   placeholder="Especialidad" class="form-control" formControlName="especialidad"  style="background-color:#007bff;border-radius: 20px;     height: 40px; font-size: 22px; border: none;  color: #fff;  " >
 
-      <option value="Recepcionista">Recepcionista</option>
-      <option value="Odontologo">Odontologo </option>
-      <option value="odontopediatría">Odontopediatría</option>
-      <option value="implantologo ">Implantólogo </option>
+      <option *ngFor="let tech of allTechnologies" [ngValue]="tech">
+          {{ tech }}
+        </option>
   
   
-    </select> -->
+    </select>
             </div>
   
   
             <div class="row submit-button-container" style="                width: 100%;
             justify-content: flex-end; ">
               <div class="col-md-4">
-                <button mat-raised-button class="submit-button" color="primary" type="submit" [disabled]="!exampleForm.valid">Create</button>
+                <button mat-raised-button class="submit-button" color="primary" type="submit" [disabled]="!exampleForm.valid">Crear</button>
               </div>
             </div>
 
