--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -9,7 +9,7 @@
         <input type="text" placeholder="Ingrese usuario"   name="uname" [(ngModel)]="email" >
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
-        <input style=" font-size: 22px" type="password"    [(ngModel)]="password" name="psw" placeholder="Ingrese contraseña">
+        <input type="password"  name="psw" style=" font-size: 22px"   placeholder="Ingrese contraseña"   [(ngModel)]="password" >
         <input type="submit"  (click)="loginUser()" value="Log In">
         <h4>Seleccione Usuario</h4>
  
