--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,61 +1,101 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		<a class="navbar-brand" style="color: brown">Perfil: {{perfil}}</a>
+		<a class="navbar-brand" style="color: brown">email:{{email}}</a>
+
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+	  
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		  <ul class="navbar-nav mr-auto">
+			<li class="nav-item active">
+			  <a class="nav-link" routerLink="home">Home <span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link"  routerLink="listadopacientes">Listado Pacientes</a>
+			</li>
+
+			<li class="nav-item">
+			  <a  class="nav-link"  routerLink="Habilitarturnos" >Habilitar Turnos</a>
+			</li>
+			<li class="nav-item">
+				<a  class="nav-link"  routerLink="crearconsultario" >Crear consultorio</a>
+			  </li>
+			  <li class="nav-item">
+				<a  class="nav-link"  routerLink="verturnospaciente" >Mis turnos</a>
+			  </li>
+			  <li class="nav-item">
+				<a  class="nav-link"  routerLink="encuestacliente" >Encuesta cliente</a>
+			  </li>
+			  <li class="nav-item">
+				<a  class="nav-link"  routerLink="TurnosDemispacientes" >Turnos mis pacientes</a>
+			  </li>
+			  <li class="nav-item">
+				<a  class="nav-link"  routerLink="SalaDeEspera" >Sala de Espera</a>
+			  </li>
+			  <li class="nav-item">
+				<a  class="nav-link"  routerLink="Estadisticas" >Estadisticas</a>
+			  </li>
+		  </ul>
+		  
+		  
+		  
+		  <!-- <form class="form-inline my-2 my-lg-0">
+			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+		  </form> -->
+		</div>
+	  </nav>
 <div class="page-container">
+	
 	<div class="side-bar">
 		<ul class="nav flex-column">
-	<li class="nav-item"  >
-			<a class="nav-link active"  >
-		  <h1 style="color: brown">Perfil: {{perfil}}</h1>
-				</a>
-			</li>
-			<li class="nav-item"  >
-					<a class="nav-link active"  >
-				  <h1 style="color: brown">email:{{email}}</h1>
-						</a>
-					</li>
-	  	<li class="nav-item"  *ngIf="userProfile?.perfil=='Supervisor'">
+
+	  	<li class="nav-item"  *ngIf="perfil=='Supervisor'">
 	    	<a class="nav-link active" routerLink="home" >
 					<ion-icon name="list"></ion-icon>
 				</a>
 		  </li>
-		  <li class="nav-item" *ngIf="userProfile?.perfil=='Supervisor'">
+		  <li class="nav-item"  *ngIf="perfil=='Supervisor'">
 				<a class="nav-link active" style="color:red" routerLink="listadoespecialistas">
 						<ion-icon name="list-box"></ion-icon>
 					</a>
 			  </li>
-	  	<li class="nav-item" *ngIf="userProfile?.perfil=='Supervisor'">
+	  	<li class="nav-item"  *ngIf="perfil=='Supervisor'">
 	    	<a class="nav-link" routerLink="TurnosAlta">
 					<ion-icon name="add"></ion-icon>
 				</a>
 		  </li>
-		  <li class="nav-item" *ngIf="userProfile?.perfil=='Supervisor'">
+		  <li class="nav-item"  *ngIf="perfil=='Supervisor'">
 	    	<a class="nav-link" routerLink="new-user">
 					<ion-icon name="compass"></ion-icon>
 				</a>
 		  </li>
 
-		  <li class="nav-item" *ngIf="userProfile?.perfil=='Supervisor'">
+		  <li class="nav-item"  *ngIf="perfil=='Supervisor'">
 	    	<a class="nav-link" routerLink="new-user">
 					<ion-icon name="download"></ion-icon>
 				</a>
 		  </li>
-		  <li class="nav-item" *ngIf="userProfile?.perfil=='Supervisor'">
+		  <li class="nav-item"  *ngIf="perfil=='Supervisor'">
 	    	<a class="nav-link" routerLink="new-user">
 					<ion-icon name="calendar"></ion-icon>
 				</a>
 		  </li>
-		  <li class="nav-item" *ngIf="userProfile?.perfil=='Supervisor'">
+		  <li class="nav-item"  *ngIf="perfil=='Supervisor'">
 	    	<a class="nav-link" routerLink="new-user">
 					<ion-icon name="pie"></ion-icon>
 <!-- <					<span>Filter </span> -->
 
 				</a>
 		  </li>
-		  <li class="nav-item" *ngIf="userProfile?.perfil=='Supervisor'">
+		  <li class="nav-item" *ngIf="perfil=='Supervisor'">
 	    	<a class="nav-link" routerLink="new-user">
 					<ion-icon name="stats"></ion-icon>
 				</a>
 		  </li>
 		  <li class="nav-item">
-				<a class="nav-link" routerLink="altas" *ngIf="userProfile?.perfil=='Supervisor'">
+				<a class="nav-link" routerLink="altas"  *ngIf="perfil=='Supervisor'">
 						<ion-icon name="person-add"></ion-icon>
 					</a>
 			  </li>
@@ -64,7 +104,7 @@
 										<ion-icon name="md-clock">Asignar</ion-icon>
 					</a>
 			  </li>
-		  <li class="nav-item" *ngIf="userProfile?.perfil=='Supervisor'">
+		  <li class="nav-item"  *ngIf="perfil=='Supervisor'">
 			<a class="nav-link" (click)="logout()" style="color:red">
 									<ion-icon name="log-out"></ion-icon>
 				</a>
